1차 API 구현 완료
